<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="yff-W7-xUg">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
    </dependencies>
    <scenes>
        <!--JSQWebViewController-->
        <scene sceneID="cFu-a8-enj">
            <objects>
                <tableViewController id="SVu-fs-8q7" customClass="ViewController" customModule="Example" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="rEA-4q-5Mj">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <sections>
                            <tableViewSection id="vp8-WB-xhf">
                                <cells>
                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="eVA-4Y-iLl" rowHeight="60" style="IBUITableViewCellStyleDefault" id="bgy-ry-dgP">
                                        <rect key="frame" x="0.0" y="99" width="600" height="60"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bgy-ry-dgP" id="4gk-ro-mR1">
                                            <rect key="frame" x="0.0" y="0.0" width="567" height="59"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Push" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="eVA-4Y-iLl">
                                                    <rect key="frame" x="15" y="0.0" width="550" height="59"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="Tug-h4-jxo" rowHeight="60" style="IBUITableViewCellStyleDefault" id="gsv-R4-Kdc">
                                        <rect key="frame" x="0.0" y="159" width="600" height="60"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gsv-R4-Kdc" id="1Zk-Ve-tPq">
                                            <rect key="frame" x="0.0" y="0.0" width="567" height="59"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Modal" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Tug-h4-jxo">
                                                    <rect key="frame" x="15" y="0.0" width="550" height="59"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="Ulw-7Z-bkO" rowHeight="60" style="IBUITableViewCellStyleDefault" id="PJq-Ev-elh">
                                        <rect key="frame" x="0.0" y="219" width="600" height="60"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PJq-Ev-elh" id="0Wa-l7-z8H">
                                            <rect key="frame" x="0.0" y="0.0" width="567" height="59"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Storyboard" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ulw-7Z-bkO">
                                                    <rect key="frame" x="15" y="0.0" width="550" height="59"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <connections>
                                            <segue destination="B4C-HE-uga" kind="show" identifier="segue" id="K3C-bD-zgm"/>
                                        </connections>
                                    </tableViewCell>
                                </cells>
                            </tableViewSection>
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="SVu-fs-8q7" id="zTo-iu-9go"/>
                            <outlet property="delegate" destination="SVu-fs-8q7" id="IJE-2V-EDS"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="JSQWebViewController" id="rq7-wd-LB2"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="bzg-VN-mqG" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1163" y="511"/>
        </scene>
        <!--Web View Controller-->
        <scene sceneID="qZP-bv-YYC">
            <objects>
                <viewController id="B4C-HE-uga" customClass="WebViewController" customModule="JSQWebViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="ODF-3i-0RO"/>
                        <viewControllerLayoutGuide type="bottom" id="764-FS-y6w"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Ue7-Q5-ULg">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <keyCommands/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="agu-v6-EzM" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1844" y="511"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="DBX-0P-Dtm">
            <objects>
                <navigationController id="yff-W7-xUg" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Tyj-dU-Hs4">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="SVu-fs-8q7" kind="relationship" relationship="rootViewController" id="mS0-K6-b8D"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="MRb-mO-yT1" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="458" y="511"/>
        </scene>
    </scenes>
</document>
